Added support for online instant booking
Changed affected entities, DTOs, controllers, services, and adjusted frontend routes and components